<resources>
    <string name="app_name">uni</string>
    <string name="loading">Загрузка…</string>
    <string name="main">Главная</string>
    <string name="contacts">Контакты</string>
    <string name="events_program">Программа мероприятий</string>
    <string name="participants">Участники</string>
    <string name="statistic">Статистика</string>
    <string name="todo">TODO</string>
    <string name="today">Сегодня</string>
    <string name="settings_title">Основные данные</string>
    <string name="save">СОХРАНИТЬ</string>
    <string name="note_inside_app">Примечание внутри приложения</string>
    <string name="_0">0</string>
    <string name="dot">·</string>
    <string name="organization">Организация</string>
    <string name="position">Должность</string>
    <string name="add_note">Добавить заметку</string>
    <string name="secur_rights">Права доступа</string>
    <string name="zones">Зоны</string>
    <string name="objects">Объекты</string>
    <string name="mobile">Мобильный</string>
    <string name="email">Эл. почта</string>
    <string name="message_inside_app">Сообщение внутри приложения</string>
    <string name="write">Написать</string>
    <string name="clear">очистить</string>
    <string name="filter">Фильтр</string>
    <string name="id">ID</string>
    <string name="category">Категория</string>
    <string name="status">Статус</string>
    <string name="fio">ФИО</string>
    <string name="apply">применить</string>
    <string name="program">Программа мероприятия</string>
    <string name="first">"Участник не подавал заявку на указанный пункт программы"</string>
    <string name="second">Пункт программы выбран и участие подтверждено Оргкомитетом</string>
    <string name="third">Пункт программы выбран и ожидается подтверждение Оргкомитета</string>
    <string name="fourth">Оргкомитетом отказано участии в выбранном пункте программы</string>
    <string name="date_template">дд/мм/гггг - дд/мм/гггг</string>
    <string name="time_template">чч:мм - чч:мм</string>
    <string name="sport_type">Вид спорта</string>
    <string name="gender">Пол</string>
    <string name="placement">Место проведения</string>
    <string name="profile">Профиль</string>
    <string name="badge">Бейдж</string>
    <string name="schedule">Расписание</string>
    <string name="full_program">Вся программа</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="enter_code">Введите код</string>
    <string name="new_password">Новый пароль</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="reset_password">Сбросить пароль</string>
    <string name="note">Заметка</string>
</resources>