<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="center|start"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:srcCompat="@drawable/ic_calendar"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|start"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/first"
        android:textColor="#99000000" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="center|start"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:srcCompat="@drawable/ic_baseline_check_24"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|start"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/second"
        android:textColor="#99000000" />

    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="center|start"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:srcCompat="@drawable/ic_wait"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|start"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/third"
        android:textColor="#99000000" />

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="center|start"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:srcCompat="@drawable/ic_deny"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|start"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/fourth"
        android:textColor="#99000000" />

</LinearLayout>