<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/schedule_search_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/todo"
        android:focusable="true"
        android:visibility="gone"
        app:backgroundTint="@color/colorAccent"
        app:layout_anchor="@id/bottomAppBar2"
        app:srcCompat="@drawable/ic_search"
        app:tint="#ffffff" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/photo_btn"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="16dp"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    app:cornerRadius="48dp"
                    app:icon="@drawable/ic_add_photo"
                    app:iconGravity="textStart"
                    app:iconPadding="0dp"
                    app:iconTint="#000000"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/title_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/photo_btn"
                    app:layout_constraintStart_toEndOf="@+id/close_btn"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/close_btn"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    app:cornerRadius="48dp"
                    app:icon="@drawable/ic_cross"
                    app:iconGravity="textStart"
                    app:iconPadding="0dp"
                    app:iconTint="#000000"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.Toolbar>


        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@color/colorPrimary"
            app:tabGravity="center"
            app:tabIndicatorColor="#000000"
            app:tabIndicatorGravity="bottom"
            app:tabMode="scrollable"
            app:tabSelectedTextColor="#000000"
            app:tabTextColor="#61000000">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/profile" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/badge" />
            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/schedule" />
        </com.google.android.material.tabs.TabLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/participant_vp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar2"
        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:fitsSystemWindows="true"
        android:visibility="gone"
        app:backgroundTint="#ffffff"
        app:contentInsetStart="0dp"
        app:elevation="0dp"
        app:fabAlignmentMode="end"
        app:fabAnimationMode="scale"
        app:hideOnScroll="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/info_btn"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:drawableEnd="@drawable/ic_outline_info_24"
                android:drawableTint="#99000000"
                android:fontFamily="@font/roboto_medium"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/full_program"
                android:textAlignment="center"
                android:textColor="#61000000" />
        </LinearLayout>
    </com.google.android.material.bottomappbar.BottomAppBar>

</androidx.coordinatorlayout.widget.CoordinatorLayout>