<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/filter_close_btn"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_alignParentStart="true"
                    android:layout_gravity="center|start"
                    android:gravity="center|start"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    app:cornerRadius="48dp"
                    app:icon="@drawable/ic_cross"
                    app:iconGravity="textStart"
                    app:iconPadding="0dp"
                    app:iconTint="#000000" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/clear_all_btn"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|end"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/clear"
                    android:textColor="#DE000000"
                    android:visibility="gone" />
        </androidx.coordinatorlayout.widget.CoordinatorLayout>
        </androidx.appcompat.widget.Toolbar>



    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffffff">

            <EditText
                android:id="@+id/text_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="#ffffff"
                android:ems="10"
                android:hint="@string/note"
                android:inputType="textMultiLine"
                android:maxLines="30"
                android:minLines="1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/apply_efab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:fitsSystemWindows="true"
        android:text="@string/save"
        android:textColor="#ffffff"
        android:visibility="gone"
        app:backgroundTint="@color/colorAccent"
        app:icon="@drawable/ic_outline_save"
        app:iconTint="#ffffff" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>